# solana-token-registry

./: .gitignore  README.md  package.json
client/: .eslintrc.cjs  initRegistry.js  package-lock.json  package.json
client/public/: index.html  manifest.json
client/scripts/: deploy.sh
client/src/: App.css  App.tsx  Application.tsx  Common.tsx  Homepage.tsx  index.tsx
design/: README.md
js/: .eslintrc.js  jestconfig.json  package-lock.json  package.json
js/src/: index.ts  registry-keypair.json  registryKeypair.ts
js/src/__tests__/: createentry.test.ts  deleteentry.test.ts  fuzz.test.ts  index.test.ts  initializeregistry.test.ts  transferfeeauthority.test.ts  transfertokenauthority.test.ts  updateentry.test.ts  updatefees.test.ts  utils.ts
program/: Cargo.toml  package-lock.json  package.json
program/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
scripts/: final-deploy.sh
